name: bfg
version: 0.1.0
build-type: Simple
cabal-version: >= 1.10

flag init
  default: False

executable bfg-api
  main-is: Main.hs
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >= 4.8 && < 4.9
    , aeson >= 0.8 && < 0.9
    , blaze-html >= 0.8 && < 0.9
    , either >= 4.4 && < 4.5
    , monad-logger >= 0.3 && < 0.4
    , mtl >= 2.2 && < 2.3
    , pandoc >= 1.15 && < 1.16
    , persistent >= 2.2 && < 2.3
    , persistent-sqlite >= 2.2 && < 2.3
    , persistent-template >= 2.1 && < 2.2
    , servant-blaze >= 0.4 && < 0.5
    , servant-docs >= 0.4 && < 0.5
    , servant-pandoc >= 0.4 && < 0.5
    , servant-server >= 0.4 && < 0.5
    , text >= 1.2 && < 1.3
    , wai >= 3.0 && < 3.1
    , wai-extra >= 3.0 && < 3.1
    , warp >= 3.1 && < 3.2
  default-language: Haskell2010
  if flag(init)
    cpp-options: -DBFG_INIT
